# XIVSlothCombo

./: .editorconfig  .gitignore  .gitmodules  CustomComboPreset.cs  DRG.cs  LICENSE  New Text Document.txt  README.md  WHM.cs  XIVComboExpanded.sln  XIVComboWayTooAkiiified.sln  XIVComboWayTooAkiiified.sln - Shortcut.lnk  XIVSlothCombo.json  XIVSlothCombo.sln  XIVSlothCombo.sln.DotSettings  XivComobAkified.json  desktop.ini  pluginmaster.json  statement.txt
Snapshots/: New Text Document.txt
XIVComboExpanded/: ConfigWindow.cs  ConflictingCombosAttribute.cs  CustomCombo.cs  CustomComboInfoAttribute.cs  CustomComboPreset.cs  GlobalSuppressions.cs  IconReplacer.cs  PluginAddressResolver.cs  PluginConfiguration.cs  SecretCustomComboAttribute.cs  Service.cs  XIVComboExpanded.json  (+10 more)
lib/FFXIVClientStructs/ida/: README.md  classinformer.csv  data.yml  ffxiv_client_structs_arrays.h  ffxiv_idarename.py  ffxiv_sigmaker.py  generated_data.yml  idauser.cfg  pyproject.toml  sigdata.json
lib/FFXIVClientStructs/ida/CExporter/: CExporter.csproj  Program.cs
lib/FFXIVClientStructs/ida/old/: data_2020.12.29.0000.0000.yml  data_2021.01.28.0000.0000.yml  data_2021.02.10.0000.0000.yml  data_2021.04.07.0000.0000.yml  data_2021.04.21.0000.0000.yml  data_2021.05.18.0000.0000.yml  data_2021.05.29.0000.0000.yml  data_2021.06.16.0000.0000.yml  data_2021.07.15.0000.0000.yml  data_2021.08.17.0000.0000.yml  data_2021.11.28.0000.0000.yml  data_2021.12.16.0000.0000.yml  ffxiv_idarename_2020.10.21.0001.0000.py  ffxiv_idarename_2020.12.02.0000.0000.py  ffxiv_idarename_2020.12.15.0000.0000.py
(+500 files in other folders)
