[tool.poetry]
name = "IDAPython"
version = "0.0.1"
description = "FFXIVClientStructs IDA scripts"
authors = ["aers", "daemitus", "pohky"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = {version = "^6.0", optional = true}
dacite = {version = "^1.6.0", optional = true}
anytree = {version = "^2.8.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
idarename = ["PyYAML", "anytree"]
sigmaker = ["PyYAML", "dacite"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
